# trelloban

./: .env.local  .gitignore  pyproject.toml
backend/: main.py  schema.py
backend/gql/mutations/: create_column.py  create_task.py  sort_coluns.py  sort_tasks.py
backend/models/: __init__.py  column.py  task.py
docker/dynamodb/: shared-local-instance.db
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx  Column.tsx  CreateColumn.tsx  CreateTask.tsx  SortTasks.tsx  gql.ts  main.tsx  utils.tsx
frontend/src/components/: App.tsx  Column.tsx  CreateColumn.tsx  CreateTask.tsx  SortTasks.tsx
