[tool.poetry]
name = "trelloban"
packages = [{include = "app"}]
version = "0.1.0"
description = ""
authors = ["Boris Staal <boris@staal.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
graphene = ">=3.0"
install = "^1.3.5"
pynamodb = "^6.0.1"
python-dotenv = "^1.0.1"
django = "^5.0.7"
graphene-django = "^3.2.2"
starlette-graphene3 = "^0.6.0"
uvicorn = "^0.30.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
